<resources>
    <string name="app_name">TorahDownloads</string>
    <string name="speakers_activity_name">Speakers</string>
    <string name="shiurim_activity_name">Shiurim</string>
    <string name="home">Home</string>
    <string name="now_playing">Now Playing</string>
    <string name="categories">Categories</string>
    <string name="speakers">Speakers</string>
    <string name="series">Series</string>
    <string name="playlists">Playlists</string>
    <string name="favorites">Favorites</string>
    <string name="downloads">Downloads</string>
    <string name="history">History</string>
    <string name="nav_header_desc">nav header description</string>
    <string name="nav_header_title">nav header title</string>
    <string name="nav_header_subtitle">nav header subtitle</string>
    <string name="tab_name_none">None</string>
    <string name="tab_name_category">Category</string>
    <string name="tab_name_speaker">Speaker</string>
    <string name="tab_name_series">Series</string>
    <string name="recently_added_shiurim">Recently Added Shiurim</string>
    <string name="long_lorem_impsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nisi quis eleifend quam adipiscing. Id volutpat lacus laoreet non curabitur gravida arcu. Justo eget magna fermentum iaculis eu non diam. Placerat duis ultricies lacus sed turpis tincidunt id. Amet aliquam id diam maecenas. Augue mauris augue neque gravida in fermentum et sollicitudin. Aliquet enim tortor at auctor urna nunc. Aliquet lectus proin nibh nisl condimentum id venenatis a. Tortor dignissim convallis aenean et. Aliquam sem et tortor consequat id porta nibh venenatis. Lorem mollis aliquam ut porttitor leo.

Turpis egestas integer eget aliquet nibh praesent tristique. Sagittis orci a scelerisque purus semper eget duis. Diam quis enim lobortis scelerisque fermentum. Adipiscing vitae proin sagittis nisl. Mus mauris vitae ultricies leo integer malesuada nunc vel. Tristique sollicitudin nibh sit amet commodo nulla facilisi nullam. Et pharetra pharetra massa massa ultricies mi quis. Massa tempor nec feugiat nisl pretium fusce id velit. Euismod lacinia at quis risus sed vulputate odio. Sit amet consectetur adipiscing elit. Tortor consequat id porta nibh venenatis. Est ultricies integer quis auctor.

Risus nullam eget felis eget nunc lobortis mattis. Nascetur ridiculus mus mauris vitae ultricies leo integer malesuada nunc. Platea dictumst quisque sagittis purus sit amet volutpat consequat mauris. Volutpat commodo sed egestas egestas fringilla phasellus faucibus scelerisque. Mauris ultrices eros in cursus turpis. Et tortor at risus viverra adipiscing at in tellus. Non curabitur gravida arcu ac. Platea dictumst quisque sagittis purus. Ornare lectus sit amet est placerat in egestas erat imperdiet. Id leo in vitae turpis massa sed. Id interdum velit laoreet id donec. Diam donec adipiscing tristique risus.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nisi quis eleifend quam adipiscing. Id volutpat lacus laoreet non curabitur gravida arcu. Justo eget magna fermentum iaculis eu non diam. Placerat duis ultricies lacus sed turpis tincidunt id. Amet aliquam id diam maecenas. Augue mauris augue neque gravida in fermentum et sollicitudin. Aliquet enim tortor at auctor urna nunc. Aliquet lectus proin nibh nisl condimentum id venenatis a. Tortor dignissim convallis aenean et. Aliquam sem et tortor consequat id porta nibh venenatis. Lorem mollis aliquam ut porttitor leo.

Turpis egestas integer eget aliquet nibh praesent tristique. Sagittis orci a scelerisque purus semper eget duis. Diam quis enim lobortis scelerisque fermentum. Adipiscing vitae proin sagittis nisl. Mus mauris vitae ultricies leo integer malesuada nunc vel. Tristique sollicitudin nibh sit amet commodo nulla facilisi nullam. Et pharetra pharetra massa massa ultricies mi quis. Massa tempor nec feugiat nisl pretium fusce id velit. Euismod lacinia at quis risus sed vulputate odio. Sit amet consectetur adipiscing elit. Tortor consequat id porta nibh venenatis. Est ultricies integer quis auctor.

Risus nullam eget felis eget nunc lobortis mattis. Nascetur ridiculus mus mauris vitae ultricies leo integer malesuada nunc. Platea dictumst quisque sagittis purus sit amet volutpat consequat mauris. Volutpat commodo sed egestas egestas fringilla phasellus faucibus scelerisque. Mauris ultrices eros in cursus turpis. Et tortor at risus viverra adipiscing at in tellus. Non curabitur gravida arcu ac. Platea dictumst quisque sagittis purus. Ornare lectus sit amet est placerat in egestas erat imperdiet. Id leo in vitae turpis massa sed. Id interdum velit laoreet id donec. Diam donec adipiscing tristique risus.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nisi quis eleifend quam adipiscing. Id volutpat lacus laoreet non curabitur gravida arcu. Justo eget magna fermentum iaculis eu non diam. Placerat duis ultricies lacus sed turpis tincidunt id. Amet aliquam id diam maecenas. Augue mauris augue neque gravida in fermentum et sollicitudin. Aliquet enim tortor at auctor urna nunc. Aliquet lectus proin nibh nisl condimentum id venenatis a. Tortor dignissim convallis aenean et. Aliquam sem et tortor consequat id porta nibh venenatis. Lorem mollis aliquam ut porttitor leo.

Turpis egestas integer eget aliquet nibh praesent tristique. Sagittis orci a scelerisque purus semper eget duis. Diam quis enim lobortis scelerisque fermentum. Adipiscing vitae proin sagittis nisl. Mus mauris vitae ultricies leo integer malesuada nunc vel. Tristique sollicitudin nibh sit amet commodo nulla facilisi nullam. Et pharetra pharetra massa massa ultricies mi quis. Massa tempor nec feugiat nisl pretium fusce id velit. Euismod lacinia at quis risus sed vulputate odio. Sit amet consectetur adipiscing elit. Tortor consequat id porta nibh venenatis. Est ultricies integer quis auctor.

Risus nullam eget felis eget nunc lobortis mattis. Nascetur ridiculus mus mauris vitae ultricies leo integer malesuada nunc. Platea dictumst quisque sagittis purus sit amet volutpat consequat mauris. Volutpat commodo sed egestas egestas fringilla phasellus faucibus scelerisque. Mauris ultrices eros in cursus turpis. Et tortor at risus viverra adipiscing at in tellus. Non curabitur gravida arcu ac. Platea dictumst quisque sagittis purus. Ornare lectus sit amet est placerat in egestas erat imperdiet. Id leo in vitae turpis massa sed. Id interdum velit laoreet id donec. Diam donec adipiscing tristique risus."</string>
    <string name="length">Length</string>
    <string name="has_attachment">Has attachment</string><!--TODO should the second word alse be capital? viz. "Has Attachment"-->
    <string name="has_description">Has description</string>
    <string name="date_uploaded">Date uploaded</string>
    <string name="date_added_to_personal_collection">Date added to personal collection</string>
    <string name="language">Language</string>
    <string name="id">ID</string><!--TODO ^-->
</resources>